# Confidential-Balances-Sample

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: FAQ.md
docs/guides/: product-guide.md  wallet-integration.md
docs/reference/: cryptography.md  js-clients.md  rust-deps.md  token-extensions.md
examples/: batch_transfer_atomic.rs  batch_transfer_pipelined.rs  get_balances.rs  run_transfer.rs  run_transfer_with_fees.rs
examples/common/: mod.rs
ingredients/apply_pending_balance/: Cargo.toml
ingredients/apply_pending_balance/src/: lib.rs
ingredients/deposit_tokens/src/: lib.rs
ingredients/global_auditor_assert/: Cargo.toml
ingredients/global_auditor_assert/src/: lib.rs
ingredients/mint_tokens/: Cargo.toml
ingredients/mint_tokens/src/: lib.rs
ingredients/setup_mint/: Cargo.toml
ingredients/setup_mint/src/: lib.rs
ingredients/setup_mint_confidential/: Cargo.toml
ingredients/setup_mint_confidential/src/: lib.rs
ingredients/setup_participants/: Cargo.toml
ingredients/setup_participants/src/: lib.rs
ingredients/setup_token_account/src/: lib.rs
ingredients/transfer/: Cargo.toml
ingredients/transfer/src/: lib.rs
ingredients/withdraw_tokens/src/: lib.rs
recipes/: Cargo.toml
recipes/src/: lib.rs
src/: apply_pending.rs  balances.rs  batch_transfer.rs  configure.rs  deposit.rs  lib.rs  setup.rs  transfer.rs  transfer_with_fee.rs  types.rs  withdraw.rs
tests/: integration_test.rs
tests/common/: mod.rs
utils/: Cargo.toml
utils/src/: gcp.rs  jito.rs  lib.rs
