[package]
name = "conf-balances-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo-server"
path = "src/bin/demo-server.rs"

[dependencies]
# Solana core via granular crates, no solana-sdk umbrella. The whole graph is
# on solana-zk-sdk 6.0.1 (spl-token-2022 11.0.0 targets it natively, so there's
# no 4.0 to 6.0.1 split and no byte-casting).
#
# solana-client is the 4.0.0-rc.0 line: its rpc-client is built on the 3.x
# transaction/message types, so we pin solana-transaction to 3.1 to match it.
# Everything resolves to solana-pubkey 4.2 (= solana_address::Address), so
# Pubkey == Address and no conversions are needed. Using the umbrella solana-sdk
# 4.x instead would drag in transaction 4.x (mismatch with the rc rpc-client)
# and the wincode skew, hence the granular crates.
solana-client = "4.0.0-rc.0"
solana-pubkey = "4.2"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-signature = "3.0"
solana-transaction = "3.1"
solana-instruction = "3.4"
solana-native-token = "3.0"
solana-zk-sdk = "6.0.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }

# SPL Token-2022 (agave v4 aligned). token-2022 11.0.0 builds on zk-sdk 6.0.1
# and proof-{extraction,generation} 0.6.0 directly.
spl-token-2022 = { version = "11.0.0", features = ["zk-ops"] }
spl-associated-token-account = "8.0.0"
spl-token-confidential-transfer-proof-extraction = "0.6.0"
spl-token-confidential-transfer-proof-generation = "0.6.0"

# ZK ElGamal proof-program helpers (create/verify/close context state accounts).
solana-zk-elgamal-proof-interface = "0.1.2"
solana-zk-sdk-pod = "0.1.2"
solana-address = "2.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Commitment config
solana-commitment-config = "3.1.1"

# Demo server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }

# Utilities
hex = "0.4"
serde_json = "1.0"

[dev-dependencies]
# solana-test-validator = "=4.0.0-rc.0"
env_logger = "0.11"
serde_json = "1.0"
solana-commitment-config = "3.1.1"
