[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-commitment-config = "3.0.0"
solana-keypair = "3.1.0"
solana-signer = "3.0.0"
solana-instruction = "3.1.0"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-system-interface = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
spl-token-2022 = { workspace = true }
solana-client = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
google-cloud-kms = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
jito-sdk-rust = { workspace = true }
reqwest = { version = "0.12.11", features = ["json"] }
hex = "0.4"