[package]
name = "apply_pending_balance"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../../utils" }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-token-client = { workspace = true }
spl-associated-token-account = { workspace = true }
