[package]
name = "global_auditor_assert"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = "3.0.0"
solana-transaction-status-client-types = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }

utils = { path = "../../utils" }
bs58 = { workspace = true }
