[package]
name = "mint_tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../../utils" }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }

# For Confidential MintBurn
spl-token-confidential-transfer-proof-extraction = { workspace = true }
