[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-system-interface = "2.0.0"
spl-token-client = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token-confidential-transfer-proof-generation = { workspace = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true }

bs58 = { workspace = true }
jito-sdk-rust = { workspace = true }
utils = { path = "../../utils" }
bytemuck = "1.20.0"
bincode = "1.3.3"
serde_json = "1.0"
